--- a/.travis.yml
+++ b/.travis.yml
@@ -4,37 +4,68 @@ linux: &linux
    language: python
    python: "3.6"
    services:
-     - docker
+      - docker
+
 osx: &osx
    os: osx
    language: generic
+
+
 matrix:
    include:
 
       - <<: *linux
-        env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=lasote/conangcc49
+        env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=lasote/conangcc49 CONAN_ICU_SHARED=True
       - <<: *linux
-        env: CONAN_GCC_VERSIONS=5.4 CONAN_DOCKER_IMAGE=lasote/conangcc54
+        env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=lasote/conangcc49 CONAN_ICU_SHARED=False
+
       - <<: *linux
-        env: CONAN_GCC_VERSIONS=6.3 CONAN_DOCKER_IMAGE=lasote/conangcc63
+        env: CONAN_GCC_VERSIONS=5.4 CONAN_DOCKER_IMAGE=lasote/conangcc54 CONAN_ICU_SHARED=True
       - <<: *linux
-        env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39
+        env: CONAN_GCC_VERSIONS=5.4 CONAN_DOCKER_IMAGE=lasote/conangcc54 CONAN_ICU_SHARED=False
+
       - <<: *linux
-        env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40
+        env: CONAN_GCC_VERSIONS=6.3 CONAN_DOCKER_IMAGE=lasote/conangcc63 CONAN_ICU_SHARED=True
+      - <<: *linux
+        env: CONAN_GCC_VERSIONS=6.3 CONAN_DOCKER_IMAGE=lasote/conangcc63 CONAN_ICU_SHARED=False
+
+
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_ICU_SHARED=True
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39 CONAN_ICU_SHARED=False
+
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_ICU_SHARED=True
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40 CONAN_ICU_SHARED=False
+
+
       - <<: *osx
         osx_image: xcode7.3
-        env: CONAN_APPLE_CLANG_VERSIONS=7.3
+        env: CONAN_APPLE_CLANG_VERSIONS=7.3 CONAN_ICU_SHARED=True
+      - <<: *osx
+        osx_image: xcode7.3
+        env: CONAN_APPLE_CLANG_VERSIONS=7.3 CONAN_ICU_SHARED=False
+
       - <<: *osx
         osx_image: xcode8.2
-        env: CONAN_APPLE_CLANG_VERSIONS=8.0
+        env: CONAN_APPLE_CLANG_VERSIONS=8.0 CONAN_ICU_SHARED=True
+      - <<: *osx
+        osx_image: xcode8.2
+        env: CONAN_APPLE_CLANG_VERSIONS=8.0 CONAN_ICU_SHARED=False
+
       - <<: *osx
         osx_image: xcode8.3
-        env: CONAN_APPLE_CLANG_VERSIONS=8.1
+        env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_ICU_SHARED=True
+      - <<: *osx
+        osx_image: xcode8.3
+        env: CONAN_APPLE_CLANG_VERSIONS=8.1 CONAN_ICU_SHARED=False
+
 
 install:
-  - chmod +x .travis/install.sh
-  - ./.travis/install.sh
-
+   - chmod +x .travis/install.sh
+   - ./.travis/install.sh
 script:
-  - chmod +x .travis/run.sh
-  - ./.travis/run.sh
+   - chmod +x .travis/run.sh
+   - ./.travis/run.sh
