--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,22 +1,50 @@
-build: false
+build: off
+
+# Attention: ICU > 59.1 does no longer support compilers older than VS 2015
+image:
+  - Visual Studio 2015
+  - Visual Studio 2017
+
+platform:
+#  - x86
+  - x64
+
+configuration:
+- Debug
+- Release
 
 environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.8"
     PYTHON_ARCH: "32"
 
+    CYGWIN_ROOT: "C:\\cygwin64"
+    MSYS_ROOT: "C:\\msys64"
+
     matrix:
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-          CONAN_VISUAL_VERSIONS: 14
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          CONAN_VISUAL_VERSIONS: 15
-  
+        - CONAN_ICU_MSVC_PLATFORM: cygwin
+          CONAN_ICU_SHARED: True
+
+        - CONAN_ICU_MSVC_PLATFORM: cygwin
+          CONAN_ICU_SHARED: False
+
+        - CONAN_ICU_MSVC_PLATFORM: msys
+          CONAN_ICU_SHARED: True
+
+        - CONAN_ICU_MSVC_PLATFORM: msys
+          CONAN_ICU_SHARED: False
+
+#init:
+#  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
+#on_finish:
+#  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - conan user # It creates the conan data directory
-  
+
 test_script:
   - python build.py
- 
