--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,29 +1,30 @@
-build: off
-
-# Attention: ICU > 59.1 does no longer support compilers older than VS 2015
-image:
-  - Visual Studio 2015
-  - Visual Studio 2017
-
-platform:
-#  - x86
-  - x64
-
-configuration:
-- Debug
-- Release
+build: false
 
 environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.8"
     PYTHON_ARCH: "32"
     CYGWIN_ROOT: "C:\\cygwin64"
-
+    
+    matrix:
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CONAN_VISUAL_VERSIONS: 14
+          CONAN_ICU_MSVC_PLATFORM: visual_studio
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
+          CONAN_ICU_MSVC_PLATFORM: visual_studio
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CONAN_VISUAL_VERSIONS: 14
+          CONAN_ICU_MSVC_PLATFORM: cygwin
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
+          CONAN_ICU_MSVC_PLATFORM: cygwin
+          
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - conan user # It creates the conan data directory
-
+  
 test_script:
   - python build.py
