--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,50 +1,30 @@
 build: false
 
+configuration:
+  - Debug
+  - Release
+
 environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.8"
     PYTHON_ARCH: "32"
-    CYGWIN_ROOT: "C:\\cygwin64"
-    
+
     matrix:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 14
-          CONAN_ARCHS: x86
-          CONAN_VISUAL_RUNTIMES: MT
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-          CONAN_VISUAL_VERSIONS: 14
-          CONAN_ARCHS: x86
-          CONAN_VISUAL_RUNTIMES: MD
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-          CONAN_VISUAL_VERSIONS: 14
-          CONAN_ARCHS: x86_64
-          CONAN_VISUAL_RUNTIMES: MT
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-          CONAN_VISUAL_VERSIONS: 14
-          CONAN_ARCHS: x86_64
-          CONAN_VISUAL_RUNTIMES: MD
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
-          CONAN_ARCHS: x86
-          CONAN_VISUAL_RUNTIMES: MT
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          CONAN_VISUAL_VERSIONS: 15
-          CONAN_ARCHS: x86
-          CONAN_VISUAL_RUNTIMES: MD
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          CONAN_VISUAL_VERSIONS: 15
-          CONAN_ARCHS: x86_64
-          CONAN_VISUAL_RUNTIMES: MT
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          CONAN_VISUAL_VERSIONS: 15
-          CONAN_ARCHS: x86_64
-          CONAN_VISUAL_RUNTIMES: MD
-          
+        - MINGW_CONFIGURATIONS: "6.3@x86_64@seh@posix"
+        - MINGW_CONFIGURATIONS: "7.1@x86_64@seh@posix"
+
+matrix:
+  fast_finish: true
+
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - conan user # It creates the conan data directory
-  
+
 test_script:
   - python build.py
