--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ linux: &linux
    python: "3.6"
    services:
       - docker
+
 osx: &osx
    os: osx
    language: generic
+
 matrix:
+   fast_finish: true
    include:
       - <<: *linux
         env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=lasote/conangcc49 CONAN_ARCHS=x86
@@ -52,6 +55,7 @@ matrix:
 install:
    - chmod +x .travis/install.sh
    - ./.travis/install.sh
+
 script:
    - chmod +x .travis/run.sh
    - ./.travis/run.sh
