--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Misc files (Logfiles, html)
-*.log
-*.html
-
 # Compiled Object files
 *.slo
 *.lo
@@ -32,18 +28,19 @@
 *.out
 *.app
 
-# Directories
-.idea
-__pycache__
-init.bat
-upload.bat
-build*/
-bin*
-.vs
-.vscode*
-conaninfo.txt
-conanbuildinfo.*
-CMakeFiles
-CMakeCache.txt
-cmake_install.cmakes
-Makefile
+# Cache
+__pycache__/*
+test_package/__pycache__/*
+test_package/build/*
+build/*
+*.pyc
+tmp/
+
+# IDE
+.idea/*
+.project
+.pydevproject
+.settings/*
+.ropeproject/*
+## emacs
+*~
