--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,5 @@
 build: false
 
-configuration:
-  - Debug
-  - Release
-
 environment:
     PYTHON_HOME: "C:\\Python37"
 
@@ -29,13 +25,10 @@ environment:
         - MINGW_CONFIGURATIONS: '8@x86@dwarf2@posix'
         - MINGW_CONFIGURATIONS: '8@x86_64@seh@posix'
 
-matrix:
-  fast_finish: true
-
 install:
   - set PATH=%PYTHON_HOME%;%PYTHON_HOME%/Scripts/;%PATH%
   - pip.exe install conan --upgrade
-  - pip.exe install conan_package_tools
+  - pip.exe install conan_package_tools bincrafters_package_tools
   - conan user # It creates the conan data directory
 
 test_script:
