- split into icu and icu_installer
Signed-off-by: SSE4 <tomskside@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@
 __pycache__/*
 test_package/__pycache__/*
 test_package/build/*
+test_package_installer/__pycache__/*
+test_package_installer/build/*
 build/*
 *.pyc
 tmp/
