--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,14 @@ environment:
         - MINGW_CONFIGURATIONS: '8@x86@dwarf2@posix'
         - MINGW_CONFIGURATIONS: '8@x86_64@seh@posix'
 
+        - ARCH: x86
+          CONAN_ARCHS: x86
+          CPT_TEST_FOLDER: test_package_installer
+          CONAN_CONANFILE: icu_installer.py
+        - ARCH: x86_64
+          CONAN_ARCHS: x86_64
+          CPT_TEST_FOLDER: test_package_installer
+          CONAN_CONANFILE: icu_installer.py
 install:
   - set PATH=%PYTHON_HOME%;%PYTHON_HOME%/Scripts/;%PATH%
   - pip.exe install conan --upgrade
