--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,11 +42,13 @@ environment:
         - MINGW_CONFIGURATIONS: '8@x86_64@seh@posix'
 
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
           ARCH: x86
           CONAN_ARCHS: x86
           CPT_TEST_FOLDER: test_package_installer
           CONAN_CONANFILE: icu_installer.py
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
           ARCH: x86_64
           CONAN_ARCHS: x86_64
           CPT_TEST_FOLDER: test_package_installer
