--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,22 @@ environment:
           CONAN_VISUAL_VERSIONS: 15
           CONAN_ARCHS: x86_64
           CONAN_BUILD_TYPES: Debug
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          CONAN_VISUAL_VERSIONS: 16
+          CONAN_ARCHS: x86
+          CONAN_BUILD_TYPES: Release
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          CONAN_VISUAL_VERSIONS: 16
+          CONAN_ARCHS: x86
+          CONAN_BUILD_TYPES: Debug
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          CONAN_VISUAL_VERSIONS: 16
+          CONAN_ARCHS: x86_64
+          CONAN_BUILD_TYPES: Release
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          CONAN_VISUAL_VERSIONS: 16
+          CONAN_ARCHS: x86_64
+          CONAN_BUILD_TYPES: Debug
         - MINGW_CONFIGURATIONS: '7@x86@dwarf2@posix'
         - MINGW_CONFIGURATIONS: '7@x86_64@seh@posix'
         - MINGW_CONFIGURATIONS: '8@x86@dwarf2@posix'
