--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 linux: &linux
    os: linux
-   dist: xenial
+   dist: bionic
    language: python
    python: "3.7"
    services:
@@ -36,6 +36,8 @@ matrix:
         env: CONAN_CLANG_VERSIONS=7.0 CONAN_DOCKER_IMAGE=conanio/clang7 CONAN_ARCHS=x86_64
       - <<: *linux
         env: CONAN_CLANG_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/clang8 CONAN_ARCHS=x86_64
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=9 CONAN_DOCKER_IMAGE=conanio/clang9 CONAN_ARCHS=x86_64
       - <<: *osx
         osx_image: xcode9.4
         env: CONAN_APPLE_CLANG_VERSIONS=9.1
@@ -46,10 +48,10 @@ matrix:
         osx_image: xcode10.3
         env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_ARCHS=x86_64 ARCH=x86_64 CPT_TEST_FOLDER=test_package_installer CONAN_CONANFILE=icu_installer.py
       - <<: *osx
-        osx_image: xcode11
+        osx_image: xcode11.2
         env: CONAN_APPLE_CLANG_VERSIONS=11.0
       - <<: *osx
-        osx_image: xcode11
+        osx_image: xcode11.2
         env: CONAN_APPLE_CLANG_VERSIONS=11.0 CONAN_ARCHS=x86_64 ARCH=x86_64 CPT_TEST_FOLDER=test_package_installer CONAN_CONANFILE=icu_installer.py
 
 install:
